- Add "Apply AutoFormat"
- Add new type of begin/end line (line arrow, Dimension line... )
- Add support for find/replace with format
- Now we can create directly a style from a selection
- Add support for protect content of text object
- Now we can close polyline object
- Fix save/load variable
- Use tripleState in styledia
- Removed settings-toolbar and corresponding menu-entries
- Added tab to properties-dialog according to selected object
- Moved default-settings for rectangles, pies and polygons to
  'Settings' -> 'Configure KPresenter'
- Now we can change grid color
- Add option to "Snap to grid"
- Add support for text object margins
- Improve font style
- New transition effects: Strips
- Add support for vertical alignment
- Now we can change tab stop value
- Now we can save picture from file to disk
- Add Closed Line Object (freehand, polyline, quadric bezier curve, cubic bezier curve)
- Add New Cursor for rotate tool and freehand tool
- Merged actions for lines, shapes and arrangement of objects into
  an appropriate drop-down menu
- Add support for autocorrect with format
- Add option "Allow cursor in text object protected content"
- Add import text style support
- Add save page background image on disk
- Add display field code (for variable)
- We can change autoformat language

Changes between KPresenter-1.2-beta2 and KPresenter-1.2-RC1
===========================================================
New:
- Like all of KOffice: a readonly GUI for embedding into Konqueror
- More DCOP calls

Bugfixes:
- Fix resize text object
- Fix webpresentation => display real variable value 
- Fix autocorrection (crash/change language etc...)
- Fix update sidebar
- Fix key event when text object is protect content.

Crashes:
- Fixed crash when we close kword and "special char dialogbox" is not closed
- Fixed several memory leaks
- Fixed crash when we cancel insert time/date variable.
- Fixed crash when we duplicate page and there was an embedded document.